style.css
/* ... */
.sizevignette {
  background-color: #fff;
  padding: 1%;
  border-radius: 20px;
  box-shadow: 0px 0px 3px 0px rgb(209, 201, 201);
}

.grid {
  display: grid;
  grid-template-columns: 1.9fr 1fr;
  column-gap: 50px;
  margin: 20px 0px 60px 0px;
  width: auto;
  height: auto;
  grid-row: 2;
}

.bloccolorgrey {
  background-color: #f2f2f2;
  border-radius: 20px;
  padding: 15px;
  width: 1100px;
  margin: auto;
}

.hmarg {
  margin: 20px;
  font-weight: bold;
}
.grille {
  display: grid;
  width: auto;
  height: auto;
  grid-template-columns: 1fr 1fr 1fr;
  grid-template-rows: 1fr 1fr;
  gap: 1vw;
  justify-content: center;
  align-items: center;
}
.griditem {
  width: 100%;
  height: 120px;
  object-fit: cover;
}
.sizecase {
  width: 100%;
  height: 100px;
  object-fit: cover;
  border-radius: 20px;
  background: #f2f2f2;
  display: flex;
  flex-direction: column;
  border: 5px solid transparent;
  justify-content: center;
  padding: 0.5%;
}

.sizetext {
  width: 206px;
  height: 66px;
}
.paddcapt {
  margin: 5px;
  display: inline-flex;
  flex-direction: column;
}
.legende {
  margin: 0;
  padding: 0;
}
/*les plus populaires///////////////////////////////////*/
.flexpopulaire {
  display: flex;
  justify-content: space-around;
  align-items: center;
  font-weight: bold;
}
.paddaside {
  padding: 2%;
  background-color: #f2f2f2;
  border-radius: 20px;
}
.sizevignette1 {
  background-color: #fff;
  padding: 1%;
  border-radius: 20px;
  box-shadow: 0px 0px 3px 0px rgb(209, 201, 201);
  height: 125px;
  display: flex;
  object-fit: cover;
}

.sizeimg2 {
  width: 129px;
  height: 100%;
  border-top-left-radius: 20px;
  border-bottom-left-radius: 20px;
  object-fit: cover;
}
.gridpopular {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 0.25fr 1fr 1fr 1fr;
  height: 95.4%;
  width: 400px;
  gap: 20px;
  justify-content: center;
  align-items: center;
}
.paddaside {
  padding: 2.2%;
  background-color: #f2f2f2;
  border-radius: 20px;
}
.paddcaptpop {
  padding-top: 10px;
}
.starsmargin {
  margin-top: 37px;
}
.starsmargin1 {
  margin-top: 20px;
}

/*section activité////////////////////////////*****/
.sectflex {
  display: flex;
  width: 1565px;
  height: auto;
  align-items: center;
  justify-content: space-around;
  margin-bottom: 40px;
}
.divmarginin {
  margin: -5px;
}
.sizeact {
  width: 360px;
  height: 500px;
  border-top-right-radius: 20px;
  border-top-left-radius: 20px;
  object-fit: cover;
}
.cover {
  object-fit: cover;
  width: auto;
  height: auto;
  background-color: #ffff;
  border-radius: 20px;
  box-shadow: 0px 0px 3px 0px rgb(151, 147, 147);
}
.sizeact1 {
  width: 360px;
  height: 200px;
  border-top-right-radius: 20px;
  border-top-left-radius: 20px;
  object-fit: cover;
}
.sizeactpomegue {
  width: 360px;
  height: 80%;
  border-top-right-radius: 20px;
  border-top-left-radius: 20px;
  object-fit: cover;
}
.sizeactfrioul {
  width: 360px;
  height: 100px;
  border-top-right-radius: 20px;
  border-top-left-radius: 20px;
  object-fit: cover;
}
.bottomradiusfrioul {
  border-radius: 20px;
  background-color: #fff;
  border-top: none;
  height: 160px;
  box-shadow: 0px 0px 3px 0px rgb(151, 147, 147);
  border-top-right-radius: 20px;
  border-top-left-radius: 20px;
  display: inline-flex;
  flex-direction: column;
  object-fit: cover;
}

.bottomradiuspomegue {
  border-radius: 20px;
  background-color: #fff;
  border-top: none;
  height: 330px;
  box-shadow: 0px 0px 3px 0px rgb(151, 147, 147);
  display: inline-flex;
  flex-direction: column;
  object-fit: cover;
}

#two {
  display: flex;
  flex-direction: column;
  justify-content: center;
}
.between2divs {
  margin-bottom: 50px;
}
.bottomradius {
  border-radius: 20px;
  background-color: #fff;
  border-top: none;
  height: 260px;
  box-shadow: 0px 0px 3px 0px rgb(151, 147, 147);
}

.captionmargin {
  margin: 10px;
  margin-top: 0px;
  font-weight: bold;
  display: flex;
  align-items: center;
}
/*desktop flexfooter*/
.flexfoot {
  display: flex;
  margin: 0 -4.5% 0 -4.5%;
  background-color: #f2f2f2;
}
.margfoot {
  margin-right: 12.5%;
  margin-left: 4%;
}
/*MODIFICATIONS MINEURES DESKTOP*/

.gras {
  font-weight: bold;
}
.liendeco {
  text-decoration: none;
}
.sizevignette:hover {
  cursor: pointer;
  transform: scale(1.2);
}
.sizevignette1:hover {
  cursor: pointer;
  transform: scale(1.2);
}
.cover:hover {
  cursor: pointer;
  transform: scale(1.1);
}
.bottomradius:hover {
  cursor: pointer;
  transform: scale(1.2);
}
.bottomradiusfrioul:hover {
  cursor: pointer;
  transform: scale(1.2);
}
.bottomradiuspomegue:hover {
  cursor: pointer;
  transform: scale(1.2);
}
/*MEDIA QUERYS 1680*/
@media screen and (max-width: 1680px) {
  .bloccolorgrey {
    background-color: #f2f2f2;
    border-radius: 20px;
    padding: 15px;
    width: auto;
    margin: auto;
    height: auto;
  }
  .header {
    display: flex;
    justify-content: space-between;
    width: 1220px;
  }
  .gridpopular {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 0.25fr 1fr 1fr 1fr;
    height: 850px;
    width: 400px;
    gap: 20px;
    justify-content: center;
    align-items: center;
  }

  .grille {
    display: grid;
    width: 730px;
    height: auto;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 0fr;
    gap: 1vw;
    justify-content: center;
    align-items: center;
  }
  .grid {
    display: grid;
    grid-template-columns: 1fr 1fr;
    row-gap: 30px;
    margin: 20px 0px 60px 0px;
    width: auto;
    justify-content: left;
  }
  .sectflex {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    width: 1200px;
    height: auto;
    margin-bottom: 40px;
  }

  .acth2 {
    width: auto;
    margin-left: 0px;
  }
  .paddcaptpop {
    padding-top: 10px;
    margin-left: 20px;
  }
  .starsmargin {
    margin-top: 20px;
  }
  .starsmargin1 {
    margin-top: 20px;
  }
  .starsmargin2 {
    margin-top: 20px;
  }
}
/* ... */

